src/assets/css/main.css
.figure-align {
    text-align: center;
    max-width: 100%;
}

.figure-content {
    display: inline-block;
    text-align: center;
    max-width: 100%;
}

.figure-content img {
    max-width: 100%;
    height: auto;
    display: block;
}

.figure-content figcaption {
    width: 100%;
    text-align: center;
}

.w-100 {
    width: 100%;
}


.justify-center table,
.justify-center figure {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.justify-right table,
.justify-right figure {
    margin-left: auto;
    margin-right: 0;
    text-align: right;
}

.justify-left table,
.justify-left figure {
    margin-left: 0;
    margin-right: auto;
    text-align: left;
}


/** cursor style */
[contenteditable="true"] {
    cursor: text !important;
    white-space: pre-wrap !important;
}

/* ensure placeholder overlays do not push content */
[data-placeholder][data-empty] {
    position: relative;
}

[data-placeholder][data-empty]::before {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    pointer-events: none;
}


figure figcaption[data-placeholder]:empty:before,
figure figcaption[data-placeholder][data-empty]:before {
    content: attr(data-placeholder) !important;
    /* color: #84888d !important; */
    display: inline-block !important;
}

figure figcaption {
    max-width: 100%;
    width: 100%;
    display: block;
    text-align: center;
    color: #84888d;
    margin-top: 0.25rem;
    box-sizing: border-box;
}

.block-caption[data-placeholder]:empty:before,
.block-caption[data-placeholder][data-empty]:before {
    content: attr(data-placeholder) !important;
    display: inline-block !important;
}

.block-caption {
    width: 100%;
    text-align: center;
    color: #84888d;
    box-sizing: border-box;
}

/** CSS reset */
.button-reset {
    border: none;
    margin: 0;
    padding: 0;
    width: auto;
    overflow: visible;
    background: transparent;
    font: inherit;
    line-height: normal;
}

/** add block */
.add-block {
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px solid #000;
    background-color: white;
    transition: all 0.3s ease;
    box-sizing: border-box;
    margin-left: 1.3rem;
}

.add-block-wrapper {
    width: 100%;
    height: 3.125rem;
}

.add-block-wrapper:hover .add-block {
    display: flex;
}

/** and add block */



/** List  **/
.list {
    display: flex;
    flex-direction: column;
    gap: 10px;

}

.list-item-checkable input {
    margin-top: 0.5rem;
}

.list li div {
    display: inline-block !important;
    min-width: 100px;
    line-height: 1;
}

ol.johannes-content-element,
ul.johannes-content-element {
    padding-left: 1rem !important;
}

.johannes-content-element li>button {
    /* display: none; */
    display: none;
    position: absolute;
    margin-left: 10px;
    top: 0;

    flex-direction: row;
    align-items: start;
    justify-content: start;

}

.johannes-content-element li {
    position: relative;

}

.johannes-content-element li::before {
    margin-left: 0.3125rem;
}

.johannes-content-element li:hover>button {
    /* display: inline-block; */
    display: inline-flex;

}

p.johannes-content-element {
    display: inline-block;
    margin: 0;
    padding: 0;
}

.johannes-content-element .checkbox-list {
    list-style-type: none;
    padding-left: 0 !important;
}


.johannes-content-element .checkbox-list li {
    display: flex;
    flex-direction: row;
    justify-content: left;
}


.johannes-content-element ul.checkbox-list input[type="checkbox"]:checked+span {
    text-decoration: line-through;
}

/** Add line through text decoration to checked checkboxes text div */
.block input[type="checkbox"]:checked+div {
    text-decoration: line-through;
}

/** Remove the default list style and replace by another that works with display flex */
.block ol,
.block ul {
    list-style: none;
}

.block ul .list-item,
.block ol .list-item {
    display: flex;
    flex-direction: row;
    align-items: flex-start;

}

.block ol li {
    counter-increment: item;
}

.block ol li::before {
    content: counter(item) ".";
    margin-right: 0.3125rem;
    display: flex;
    /* width: 18px; */
    justify-content: flex-start;
}

.block ul li:not(.no-list-style)::before {
    content: "•";
    margin-right: 0.3125rem;
    display: flex;
}

.list-item-checkable input {
    margin-right: 0.3125rem;
}


/** and list **/


.drag-handler {
    color: #84888d;
    visibility: hidden;
    cursor: grab;
    align-self: start;
    padding-top: 0.33rem;
    position: absolute;
    opacity: 0.5;
    user-select: none;
}

.drag-handler-wrapper {
    position: relative;
    height: 0;
    width: 0;
    user-select: none;
}

.drag-handler:active {
    cursor: grabbing;
}

.block {
    display: flex !important;
    flex-direction: row;
    margin-bottom: 1rem;
    position: relative;
    max-width: 100%;
}

.block.with-caption {
    flex-direction: column;
}

.block>*:not(.editor-only) {
    padding-left: 1.25rem;
    box-sizing: border-box;
}

.block:hover .drag-handler {
    visibility: visible;
    vertical-align: top;
    justify-content: start;
    transition: visibility 0.2s;
}

.drop-line {
    height: 1rem;
    background-color: #84888d;
    width: 100%;
}


.title h1 {
    margin-left: 1.2rem;
    line-height: 3rem;
}


#johannesEditor [contenteditable="true"]:empty:focus {
    content: attr(data-placeholder);
    color: #84888d;
    pointer-events: none;
}

#johannesEditor h1[data-placeholder]:empty:before,
#johannesEditor h1[data-placeholder][data-empty]:before {
    content: attr(data-placeholder);
    color: #84888d !important;
    display: block;
}

#johannesEditor h1[data-placeholder]:focus:before {}


#johannesEditor *[contenteditable="true"]:not(h1):empty:before,
#johannesEditor *[contenteditable="true"][data-empty]:not(h1):before {
    content: attr(data-placeholder);
    color: #84888acd;
    display: none;
}
/* ... */

